--- a/data/profile-manager.ui
+++ b/data/profile-manager.ui
@@ -15,6 +15,7 @@
           <object class="GtkToolbar" id="profile_manager_toolbar">
             <property name="visible">True</property>
             <property name="border_width">5</property>
+            <property name="show_arrow">False</property>
             <child>
               <object class="GtkToolItem" id="profile_manager_toolbar_label_custom_tool_item">
                 <property name="visible">True</property>
@@ -46,7 +47,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkToolButton" id="profile_manager_toolbar_reset_tool_button">
+              <object class="GtkToolButton" id="profile_manager_toolbar_revert_tool_button">
                 <property name="visible">True</property>
                 <property name="tooltip_markup">&lt;b&gt;&lt;i&gt;Undo all changes you've made so far an set all items to they're current value&lt;/i&gt;&lt;/b&gt;</property>
                 <property name="label" translatable="yes">_Reset</property>
@@ -61,6 +62,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="position">0</property>
           </packing>
         </child>
@@ -105,6 +107,44 @@
                                 <property name="position">1</property>
                               </packing>
                             </child>
+                            <child>
+                              <object class="GtkHButtonBox" id="profile_manager_user_avatar_h_button_box">
+                                <property name="visible">True</property>
+                                <property name="layout_style">start</property>
+                                <child>
+                                  <object class="GtkButton" id="profile_manager_update_profile_image_button">
+                                    <property name="label">gtk-save</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">True</property>
+                                    <property name="use_stock">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkButton" id="profile_manager_revert_profile_image_button">
+                                    <property name="label">gtk-revert-to-saved</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">True</property>
+                                    <property name="use_stock">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">2</property>
+                              </packing>
+                            </child>
                           </object>
                         </child>
                       </object>
@@ -124,7 +164,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkVSeparator" id="profile_manager_vseparator">
+                  <object class="GtkVSeparator" id="profile_manager_user_avatar_vseparator">
                     <property name="visible">True</property>
                     <property name="orientation">vertical</property>
                   </object>
@@ -265,13 +305,51 @@
                         <property name="position">3</property>
                       </packing>
                     </child>
+                    <child>
+                      <object class="GtkHButtonBox" id="profile_manager_user_profile_h_button_box">
+                        <property name="visible">True</property>
+                        <property name="layout_style">center</property>
+                        <child>
+                          <object class="GtkButton" id="profile_manager_update_profile_button">
+                            <property name="label">gtk-save</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="use_stock">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="profile_manager_revert_profile_button">
+                            <property name="label">gtk-revert-to-saved</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="use_stock">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">4</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="position">2</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkVSeparator" id="vseparator1">
+                  <object class="GtkVSeparator" id="profile_manager_user_profile_account_vseparator">
                     <property name="visible">True</property>
                     <property name="orientation">vertical</property>
                   </object>
@@ -295,7 +373,7 @@
                             <child>
                               <object class="GtkTable" id="profile_manager_profile_colors_table">
                                 <property name="visible">True</property>
-                                <property name="n_rows">5</property>
+                                <property name="n_rows">6</property>
                                 <property name="n_columns">2</property>
                                 <child>
                                   <object class="GtkLabel" id="profile_manager_profile_colors_background_color_label">
@@ -441,6 +519,47 @@
                                     <property name="bottom_attach">5</property>
                                   </packing>
                                 </child>
+                                <child>
+                                  <object class="GtkHButtonBox" id="profile_manager_profile_colors_h_button_box">
+                                    <property name="visible">True</property>
+                                    <property name="layout_style">end</property>
+                                    <child>
+                                      <object class="GtkButton" id="profile_manager_update_profile_colors_button">
+                                        <property name="label">gtk-save</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">True</property>
+                                        <property name="use_stock">True</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkButton" id="profile_manager_revert_profile_colors_button">
+                                        <property name="label">gtk-revert-to-saved</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">True</property>
+                                        <property name="use_stock">True</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                  </object>
+                                  <packing>
+                                    <property name="right_attach">2</property>
+                                    <property name="top_attach">5</property>
+                                    <property name="bottom_attach">6</property>
+                                    <property name="x_options">GTK_FILL</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
                               </object>
                             </child>
                           </object>
@@ -448,9 +567,8 @@
                         <child type="label">
                           <object class="GtkLabel" id="profile_manager_profile_colors_label">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">&lt;b&gt;Profile _Colors:&lt;/b&gt;</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Profile Colors:&lt;/b&gt;</property>
                             <property name="use_markup">True</property>
-                            <property name="use_underline">True</property>
                           </object>
                         </child>
                       </object>
@@ -512,6 +630,53 @@
                                   </object>
                                   <packing>
                                     <property name="position">3</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkHSeparator" id="profile_manager_background_image_hseparator">
+                                    <property name="visible">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="position">4</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkHButtonBox" id="profile_manager_background_image_h_button_box">
+                                    <property name="visible">True</property>
+                                    <property name="layout_style">end</property>
+                                    <child>
+                                      <object class="GtkButton" id="profile_manager_update_profile_background_image_button">
+                                        <property name="label">gtk-save</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">True</property>
+                                        <property name="use_stock">True</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkButton" id="profile_manager_revert_profile_background_image_button">
+                                        <property name="label">gtk-revert-to-saved</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">True</property>
+                                        <property name="use_stock">True</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="position">5</property>
                                   </packing>
                                 </child>
                               </object>
