--- a/data/update-viewer.in.ui
+++ b/data/update-viewer.in.ui
@@ -81,16 +81,16 @@
                     <property name="visible">True</property>
                     <property name="orientation">vertical</property>
                     <child>
-                      <placeholder/>
-                    </child>
-                    <child>
-                      <object class="GtkHSeparator" id="selected_updated_author_info_controls_hseparator2">
+                      <object class="GtkHSeparator" id="selected_updated_author_info_controls_hseparator">
                         <property name="visible">True</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
-                        <property name="position">1</property>
+                        <property name="position">0</property>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <object class="GtkAspectFrame" id="selected_update_update_and_forwards_aspect_frame">
@@ -105,9 +105,11 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
+                                <property name="tooltip_markup">Add this person to your list of best friends.</property>
                                 <property name="image">best_friend_image</property>
-                                <accelerator key="exclam" signal="activate" modifiers="GDK_MOD1_MASK"/>
                                 <accelerator key="asterisk" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                                <accelerator key="exclam" signal="activate" modifiers="GDK_MOD1_MASK"/>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -120,6 +122,8 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
+                                <property name="tooltip_markup">View this person's profile.</property>
                                 <accelerator key="question" signal="clicked" modifiers="GDK_MOD1_MASK"/>
                                 <child>
                                   <object class="GtkImage" id="view_user_profile_image">
@@ -139,6 +143,8 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
+                                <property name="tooltip_markup">Open this person's homepage &amp;amp; recent updates.</property>
                                 <accelerator key="h" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                                 <child>
                                   <object class="GtkImage" id="view_user_updates_image">
@@ -158,6 +164,8 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
+                                <property name="tooltip_markup">Read this person's updates which you've missed.</property>
                                 <child>
                                   <object class="GtkImage" id="view_user_unread_updates_image">
                                     <property name="visible">True</property>
@@ -193,6 +201,8 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
+                                <property name="tooltip_markup">Follow this person's updates.</property>
                                 <child>
                                   <object class="GtkImage" id="user_follow_image">
                                     <property name="visible">True</property>
@@ -211,6 +221,8 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
+                                <property name="tooltip_markup">Unfollow this person &amp;amp; stop having their updates from appearing in your homepage.</property>
                                 <child>
                                   <object class="GtkImage" id="user_unfollow_image">
                                     <property name="visible">True</property>
@@ -229,6 +241,8 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
+                                <property name="tooltip_markup">Block this person. This stops their updates from appearing in your homepage or your updates in theirs.</property>
                                 <child>
                                   <object class="GtkImage" id="user_block_image">
                                     <property name="visible">True</property>
@@ -335,6 +349,8 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <property name="has_tooltip">True</property>
+                            <property name="tooltip_markup">Shortened a URI, e.g. web address, and insert it into your update.</property>
                             <child>
                               <object class="GtkImage" id="update_viewer_shorten_uri_image">
                                 <property name="visible">True</property>
@@ -361,6 +377,8 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <property name="has_tooltip">True</property>
+                            <property name="tooltip_markup">Save this update to your favorites lists.</property>
                             <accelerator key="s" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                             <child>
                               <object class="GtkImage" id="make_fave_image">
@@ -380,6 +398,8 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <property name="has_tooltip">True</property>
+                            <property name="tooltip_markup">Remove this update from your favorites lists.</property>
                             <child>
                               <object class="GtkImage" id="update_viewer_unfave_image">
                                 <property name="visible">True</property>
@@ -410,6 +430,8 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="no_show_all">True</property>
+                            <property name="has_tooltip">True</property>
+                            <property name="tooltip_markup">View the forward &amp;amp; retweets of this update.</property>
                             <child>
                               <object class="GtkImage" id="selected_update_view_forwards_image">
                                 <property name="visible">True</property>
@@ -425,7 +447,8 @@
                         </child>
                         <child>
                           <object class="GtkVSeparator" id="update_viewer_timelines_vseparator">
-                            <property name="visible">True</property>
+                            <property name="sensitive">False</property>
+                            <property name="no_show_all">True</property>
                             <property name="orientation">vertical</property>
                           </object>
                           <packing>
@@ -439,6 +462,8 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <property name="has_tooltip">True</property>
+                            <property name="tooltip_markup">@ reply to this update's author.</property>
                             <accelerator key="r" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                             <child>
                               <object class="GtkImage" id="reply_button_image">
@@ -458,6 +483,8 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <property name="has_tooltip">True</property>
+                            <property name="tooltip_markup">Forward, RT:, this update.</property>
                             <accelerator key="f" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                             <child>
                               <object class="GtkImage" id="forward_update_button_image">
@@ -477,6 +504,8 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <property name="has_tooltip">True</property>
+                            <property name="tooltip_markup">Re-post this update as a ReTweet.</property>
                             <child>
                               <object class="GtkImage" id="retweet_image">
                                 <property name="visible">True</property>
@@ -620,8 +649,9 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <accelerator key="s" signal="clicked" modifiers="GDK_MOD1_MASK"/>
+                            <property name="tooltip_markup">Post your update.</property>
                             <accelerator key="s" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_MOD1_MASK"/>
+                            <accelerator key="s" signal="clicked" modifiers="GDK_MOD1_MASK"/>
                             <child>
                               <object class="GtkImage" id="sexy_send_image">
                                 <property name="visible">True</property>
@@ -640,9 +670,10 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <property name="has_tooltip">True</property>
                             <property name="tooltip_markup">&lt;b&gt;Send your update as a direct message, DM, to your friend/follower who sent this update:&lt;/b&gt;</property>
-                            <accelerator key="d" signal="clicked" modifiers="GDK_MOD1_MASK"/>
                             <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+                            <accelerator key="d" signal="clicked" modifiers="GDK_MOD1_MASK"/>
                             <child>
                               <object class="GtkImage" id="sexy_dm_image">
                                 <property name="visible">True</property>
@@ -672,9 +703,10 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <property name="has_tooltip">True</property>
                             <property name="tooltip_markup">&lt;i&gt;Display/hide your list of followers to whom you can direct message&lt;/i&gt;</property>
-                            <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                             <accelerator key="d" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                            <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                             <child>
                               <object class="GtkImage" id="dm_form_active_image">
                                 <property name="visible">True</property>
@@ -706,6 +738,8 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
+                                <property name="tooltip_markup">&lt;i&gt;Reload your list of followers, i.e. people you can send direct messages to.&lt;/i&gt;</property>
                                 <child>
                                   <object class="GtkImage" id="dm_refresh_image">
                                     <property name="visible">True</property>
@@ -742,6 +776,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="has_tooltip">True</property>
                                 <property name="tooltip_markup">&lt;b&gt;Send your update as a direct message, DM, to the friend you've selected from the list on the left:&lt;/b&gt;</property>
                                 <property name="relief">half</property>
                                 <child>
@@ -915,6 +950,8 @@
                                 <child>
                                   <object class="GtkToolButton" id="update_viewer_online_services_controls_edit_accounts_tool_button">
                                     <property name="visible">True</property>
+                                    <property name="has_tooltip">True</property>
+                                    <property name="tooltip_markup">Manage your accounts &amp;amp; online services.</property>
                                     <property name="label" translatable="yes">Edit Acc_ounts</property>
                                     <property name="use_underline">True</property>
                                     <property name="stock_id">gtk-dialog-authentication</property>
@@ -927,6 +964,8 @@
                                 <child>
                                   <object class="GtkToolButton" id="update_viewer_online_services_controls_reset_accounts_tool_button">
                                     <property name="visible">True</property>
+                                    <property name="has_tooltip">True</property>
+                                    <property name="tooltip_markup">&lt;i&gt;Reset the accounts your updates are posted to to their default setting.&lt;/i&gt;</property>
                                     <property name="label" translatable="yes">Reset where to update m_y status</property>
                                     <property name="use_underline">True</property>
                                     <property name="stock_id">gtk-refresh</property>
