--- a/data/main-window.in.ui
+++ b/data/main-window.in.ui
@@ -217,8 +217,8 @@
                                 <property name="image">compose_menu_new_dm_image</property>
                                 <property name="use_stock">False</property>
                                 <property name="always_show_image">True</property>
-                                <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                                 <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                                <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                               </object>
                             </child>
                           </object>
@@ -563,7 +563,9 @@
             <child>
               <object class="GtkMenuItem" id="online_service_request_menu_item">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Tools</property>
+                <property name="has_tooltip">True</property>
+                <property name="tooltip_markup">Tools for managing Upda_tes, Friends, &amp; Followers</property>
+                <property name="label" translatable="yes">Update &amp; Friendship _Tools</property>
                 <property name="use_underline">True</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="online_service_request_menu">
