--- a/data/friends-manager.in.ui
+++ b/data/friends-manager.in.ui
@@ -181,15 +181,13 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="model">friends_manager_tree_store</property>
-                        <property name="expander_column">friends_manager_user_name_tree_view_column</property>
-                        <property name="reorderable">True</property>
                         <property name="search_column">1</property>
                         <property name="fixed_height_mode">True</property>
+                        <property name="show_expanders">False</property>
                         <property name="enable_grid_lines">both</property>
                         <property name="enable_tree_lines">True</property>
                         <child>
                           <object class="GtkTreeViewColumn" id="friends_manager_user_name_tree_view_column">
-                            <property name="resizable">True</property>
                             <property name="sizing">fixed</property>
                             <property name="fixed_width">58</property>
                             <property name="title">User Name:</property>
@@ -197,6 +195,7 @@
                             <child>
                               <object class="GtkCellRendererText" id="friends_manager_user_name_tree_cell_renderer_text">
                                 <property name="width">1</property>
+                                <property name="height">1</property>
                                 <property name="wrap_mode">word-char</property>
                                 <property name="wrap_width">0</property>
                               </object>
@@ -208,7 +207,6 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="friends_manager_user_nick_name_tree_view_column">
-                            <property name="resizable">True</property>
                             <property name="sizing">fixed</property>
                             <property name="fixed_width">58</property>
                             <property name="title">Name:</property>
@@ -216,6 +214,7 @@
                             <child>
                               <object class="GtkCellRendererText" id="friends_manager_user_nick_name_cell_renderer_text">
                                 <property name="width">1</property>
+                                <property name="height">1</property>
                                 <property name="wrap_mode">word-char</property>
                                 <property name="wrap_width">0</property>
                               </object>
@@ -227,13 +226,14 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="friends_manager_friends_tree_view_column">
-                            <property name="resizable">True</property>
                             <property name="sizing">fixed</property>
                             <property name="fixed_width">76</property>
                             <property name="title">Friend:</property>
+                            <property name="expand">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="friends_manager_friends_cell_renderer_text">
                                 <property name="width">1</property>
+                                <property name="height">1</property>
                                 <property name="wrap_mode">word-char</property>
                                 <property name="wrap_width">0</property>
                               </object>
@@ -245,13 +245,14 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="friends_manager_follower_tree_view_column">
-                            <property name="resizable">True</property>
                             <property name="sizing">fixed</property>
                             <property name="fixed_width">84</property>
                             <property name="title">Follower:</property>
+                            <property name="expand">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="friends_manager_follower_cell_renderer_text">
                                 <property name="width">1</property>
+                                <property name="height">1</property>
                                 <property name="wrap_mode">word-char</property>
                                 <property name="wrap_width">0</property>
                               </object>
@@ -263,13 +264,14 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="friends_manager_created_age_tree_view_column">
-                            <property name="resizable">True</property>
                             <property name="sizing">fixed</property>
                             <property name="fixed_width">124</property>
                             <property name="title">Last Updated:</property>
+                            <property name="expand">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="friends_manager_created_age_cell_renderer_text">
                                 <property name="width">1</property>
+                                <property name="height">1</property>
                                 <property name="wrap_mode">word-char</property>
                                 <property name="wrap_width">0</property>
                               </object>
