--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -12,6 +12,7 @@
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <child>
           <object class="GtkNotebook" id="preferences_notebook">
             <property name="visible">True</property>
@@ -832,6 +833,23 @@
                               </packing>
                             </child>
                             <child>
+                              <object class="GtkCheckButton" id="updates_composition_swap_octothorpe_and_exclaimation">
+                                <property name="label" translatable="yes">Replace tags, i.e.: #, with _groups postings, i.e.: !
+  When posting to StatusNet accounts, e.g.: Identi.ca.
+  Vice-versa when posting to Twitter.
+				</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="border_width">12</property>
+                                <property name="use_underline">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkFrame" id="replace_me_with_frame">
                                 <property name="visible">True</property>
                                 <property name="label_xalign">0</property>
@@ -859,7 +877,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
